# ratchet

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: frontmatter_dataclass.py  multi_state_gemma.py  openrouter_all_models.py  requirements.txt  structured_native_schema_hybrid.py  tool_call_loop.py  yaml_dict.py
ratchet/: __init__.py  machine.py  provider_schema.py  state.py
ratchet/normalizers/: __init__.py  frontmatter.py  json_parser.py  strip_fences.py  yaml_parser.py
ratchet/prompts/: __init__.py  fixer_default.py
ratchet/strategies/: __init__.py  base.py  fixer.py  schema_injection.py  validation_feedback.py
ratchet_sm/: __init__.py  actions.py  errors.py  machine.py  provider_schema.py  state.py
ratchet_sm/normalizers/: __init__.py  base.py  extract_pseudo_tool_call.py  frontmatter.py  json_parser.py  repair_json.py  strip_fences.py  yaml_parser.py
ratchet_sm/prompts/: __init__.py  fixer_default.py  require_tool_call_default.py
ratchet_sm/strategies/: __init__.py  base.py  fixer.py  require_tool_call_feedback.py  schema_injection.py  validation_feedback.py
tests/: test_machine.py  test_machine_native_tool_call.py  test_machine_passthrough.py  test_machine_tool_call.py  test_provider_schema.py
tests/normalizers/: test_extract_pseudo_tool_call.py  test_frontmatter.py  test_json_parser.py  test_pipeline.py  test_repair_json.py  test_strip_fences.py  test_tool_call_pipeline.py  test_yaml_parser.py
tests/strategies/: test_fixer.py  test_require_tool_call_feedback.py  test_schema_injection.py  test_validation_feedback.py
