[tool.poetry]
name = "ratchet-sm"
version = "0.0.1"
description = "A provider-agnostic state machine for handling, normalizing, and recovering structured LLM outputs."
authors = ["Johanderson Mogollon <johander1822@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sonic182/ratchet"
homepage = "https://github.com/sonic182/ratchet"
documentation = "https://github.com/sonic182/ratchet#readme"
keywords = ["llm", "ai", "state machine", "structured outputs", "pydantic", "json schema", "retry", "normalizer", "openai", "anthropic", "gemini", "openrouter", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "ratchet_sm"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sonic182/ratchet/issues"
"Source" = "https://github.com/sonic182/ratchet"
"Changelog" = "https://github.com/sonic182/ratchet/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = { version = "*", optional = true }
python-frontmatter = { version = "*", optional = true }
pydantic = { version = ">=2.0", optional = true }

[tool.poetry.extras]
yaml = ["pyyaml"]
frontmatter = ["python-frontmatter"]
pydantic = ["pydantic"]
all = ["pyyaml", "python-frontmatter", "pydantic"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"
mypy = "*"
twine = "*"
pydantic = ">=2.0"
pyyaml = "*"
python-frontmatter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["ratchet_sm"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = ["frontmatter", "yaml", "pydantic"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ratchet_sm --cov-report=term-missing"
